# dariclang

./: .gitignore  README.md
book/: DARIC Book.tex
desktop/: CMakeLists.txt  Makefile  build.sh  conan-build.bat  conan-build.sh  conanfile.txt  main.cpp
desktop/Compiler/: Compiler.cpp  Compiler.h  CompilerArrays.cpp  CompilerCase.cpp  CompilerCollections.cpp  CompilerConstants.cpp  CompilerContainers.cpp  CompilerExpression.cpp  CompilerIf.cpp  CompilerInput.cpp  CompilerLibrary.cpp  CompilerLooping.cpp  CompilerOption.cpp  CompilerOptions.h  CompilerPrint.cpp  CompilerProcedure.cpp  CompilerRead.cpp  CompilerStructs.cpp  CompilerVariables.cpp  FuncParameter.h
desktop/Config/: Config.cpp  Config.h
desktop/Exception/: Exception.cpp  Exception.h
desktop/Grammar/: Daric.g4  Daric.interp  Daric.tokens  DaricBaseVisitor.cpp  DaricBaseVisitor.h  DaricLexer.cpp  DaricLexer.h  DaricLexer.interp  DaricLexer.tokens  DaricParser.cpp  DaricParser.h  DaricVisitor.cpp  DaricVisitor.h  build-grammer.sh  test.sh
desktop/IDE/: Edit.cpp  Edit.h  EditButtons.cpp  TextEditor.cpp  TextEditor.h
desktop/IDE/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
desktop/JIT/: JIT.cpp  JIT.h  String.cpp  String.h
desktop/JIT/Runtime/: Maths.cpp  Print.cpp
desktop/LLVM/: CompilerLLVM.cpp  CompilerLLVM.h  CompilerLLVMArrays.cpp  CompilerLLVMBlocks.cpp  CompilerLLVMBoolean.cpp  CompilerLLVMCalls.cpp  CompilerLLVMComparison.cpp  CompilerLLVMMaths.cpp  CompilerLLVMRun.cpp  CompilerLLVMStructs.cpp  CompilerLLVMTypes.cpp  CompilerLLVMVariables.cpp
desktop/Parser/: Parser.cpp  Parser.h  ParserCore.cpp  ParserErrorListenener.h  ParserErrorListener.h  ParserLiteral.cpp  ParserToken.h  ParserTokenType.h
desktop/Parser/Core/: ParserAssignment.cpp  ParserCollection.cpp  ParserCore.cpp  ParserExpression.cpp  ParserFunctions.cpp  ParserLiteral.cpp  ParserStatements.cpp  ParserType.cpp  ParserTypeSignature.cpp  ParserVariable.cpp
desktop/Parser/Tokens/: ParserCASE.cpp  ParserCONST.cpp  ParserDATA.cpp  ParserDIM.cpp  ParserFOR.cpp  ParserIF.cpp  ParserINPUT.cpp  ParserMODULE.cpp  ParserPRINT.cpp  ParserREPEAT.cpp  ParserSTRUCT.cpp  ParserSWAP.cpp  ParserWHILE.cpp
desktop/Scratch/: BubbleUniverse.daric  Clock.daric  Cubes.daric  Fonts.daric  Graphics2d.daric  Greedy.daric  Mandelbrot.daric  Minimal.daric  Raytracer.daric  Scratch.daric  Sierpinski.daric  Sprites.daric  Syntax.daric  Test  Tester  Tester.daric  TesterFileIO.daric  WorldInLines.daric  macOSX64
desktop/Shared/: Shared.cpp  Shared.h  SourceFile.cpp  SourceFile.h
desktop/Types/: PrimitiveTypes.h  Type.h  TypeConstant.cpp  TypeConstant.h  TypeInstance.h  TypePrimitive.cpp  TypePrimitive.h  TypePrimitiveArray.cpp  TypePrimitiveArray.h  TypeRecord.cpp  TypeRecord.h  TypeRecordArray.cpp  TypeRecordArray.h  TypeSignature.cpp  TypeSignature.h
desktop/Variables/: Instance.cpp  Instance.h  InstanceConstant.cpp  InstanceConstant.h  InstanceList.cpp  InstanceList.h  InstanceMap.cpp  InstanceMap.h  InstancePrimitive.cpp  InstancePrimitive.h  InstancePrimitiveArray.cpp  InstancePrimitiveArray.h  InstanceQueue.cpp  InstanceQueue.h  InstanceRecord.cpp  InstanceRecord.h  InstanceRecordArray.cpp  InstanceRecordArray.h  InstanceSet.cpp  InstanceSet.h  InstanceStack.cpp  InstanceStack.h  InstanceVector.cpp  InstanceVector.h  PrimitiveTypes.h  Reference.cpp  Reference.h  Shared.h  Structs.cpp  Structs.h  Types.cpp  Types.h
ide/: CMakeLists.txt  main.cpp
ide/Exception/: Exception.h
ide/IDE/: Edit.cpp  EditButtons.cpp  TextEditor.cpp  TextEditor.h
ide/UI/: Lodepng.cpp  UISDL.cpp  UISDL.h
runtime/: .gitignore  Audio.cpp  CMakeLists.txt  Chrono.cpp  Collections.cpp  Core.cpp  FileIO.cpp  FontsText.cpp  GUI.cpp  Gfx2D.cpp  Graphics3D.cpp  InputLine.cpp  KeyboardMouse.cpp  Maths.cpp  Print.cpp  Random.cpp  Sprites.cpp  String.cpp  Types.h  Window.h  conan-build.bat  conan-build.sh  conanfile.txt  main.cpp  runconan.bat
runtime/Config/: Config.cpp  Config.h  json.hpp
runtime/Containers/src/: map.c
runtime/Containers/src/include/: map.h
runtime/Graphics3D/: Engine.h  EngineOpenGL3.cpp  EngineOpenGL3SendObject.cpp  EngineShape.cpp  EngineShapeSection.cpp  EngineWorld.cpp
runtime/Input/: Input.cpp  Input.h
runtime/Sound/: SoftSynth.cpp  SoftSynth.h  SoundGenerator.cpp  Synthesizer.cpp  Synthesizer.h
runtime/Sound/generators/: Instrument.cpp  InstrumentCustom.cpp  InstrumentCustom.h  MonophonicInstrument.cpp  PolyphonicInstrument.cpp  PolyphonicInstrumentCustom.cpp  PolyphonicInstrumentCustom.h  Sequencer.cpp  Tone.cpp  Tone.h  ToneCustom.cpp  ToneCustom.h
runtime/Sound/middleware/: WAVWriter.cpp
runtime/Sound/utils/: Envelope.cpp  Patches.h  Waveforms.cpp
runtime/UI/: Lodepng.cpp  Lodepng.h  RenderShapes.cpp  RenderShapes.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  UISDL.cpp  UISDL.h  stb_image.h
runtime/UI/Console/: Console.cpp  Console.h
